# wasmi-benchmarks

./: .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bench_result.md  results.json
.cargo/: config.toml
.github/actions/install-dependencies/: action.yml
.github/workflows/: coremark.yml  main.yml
benches/: wasmi.rs
benches/criterion/: compile.rs  execute.rs  execute_with_jit.rs  instantiate.rs  main.rs  startup.rs  utils.rs
benches/criterion/vms/: mod.rs  tinywasm.rs  wasm3.rs  wasmer.rs  wasmi_new.rs  wasmi_old.rs  wasmtime.rs
benches/res/rust/argon2/: Cargo.toml  README.md  lib.rs
benches/res/wasm/: bz2.wasm  erc20.wasm  rwasm-jit.wasm
benches/res/wat/: bulk-ops.wat  counter-local.wat  counter-param.wat  fib.recursive.wat  fibonacci-rec.wat  fibonacci-tail.wat
benches/results/: ci.json
bins/: coremark.rs  plot.rs
data/: coremark.csv  coremark.json
data/amd-epyc-7763/: coremark.csv  coremark.json
data/apple-m2-pro/: coremark.csv  coremark.json  criterion.json
data/intel-xeon-platinum-8370C/: coremark.csv  coremark.json
res/wasm/: pulldown-cmark.wasm  spidermonkey.wasm
res/wat/: counter-global.wat  counter.wat  fib.tailrec.wat  fibonacci-iter.wat  matmul.wat  primes.wat
runtimes/dlr-wasm-interpreter/: Cargo.toml  lib.rs
runtimes/fizzy/: Cargo.toml  lib.rs
runtimes/silverfir-nano/: Cargo.toml  lib.rs
runtimes/spacewasm/: Cargo.toml  lib.rs
runtimes/stitch/: Cargo.toml  lib.rs
runtimes/tinywasm/: Cargo.toml  lib.rs
runtimes/toywasm/: Cargo.toml  lib.rs
runtimes/v8/: Cargo.toml  lib.rs
runtimes/wamr/: Cargo.toml  lib.rs
runtimes/wamrx/: Cargo.toml  lib.rs
runtimes/wasm3/: Cargo.toml  lib.rs
runtimes/wasmedge/: Cargo.toml  lib.rs
runtimes/wasmer/: Cargo.toml  lib.rs
runtimes/wasmi/: Cargo.toml  lib.rs
runtimes/wasmi-031/: Cargo.toml  lib.rs
runtimes/wasmi-032/: Cargo.toml  lib.rs
runtimes/wasmi-v0-31/: Cargo.toml  lib.rs
runtimes/wasmi-v0-32/: Cargo.toml  lib.rs
runtimes/wasmi-v1/: Cargo.toml  lib.rs
runtimes/wasmi-v2/: Cargo.toml  lib.rs
runtimes/wasmi-v2-beta-8/: Cargo.toml  lib.rs
runtimes/wasmtime/: Cargo.toml  lib.rs
script/: plot-coremark.py
src/: coremark.rs  lib.rs  plot.rs  utils.rs
src/vms/: mod.rs  rwasm.rs  rwasm_runtime.rs  stitch.rs  tinywasm.rs  wasm3.rs  wasmer.rs  wasmi_new.rs  wasmi_old.rs  wasmtime.rs
utils/: Cargo.toml  lib.rs
utils/src/: id.rs  lib.rs  linker.rs  typed_call.rs  val.rs
