[package]
name = "wasmi-benchmarks"
version = "0.1.0"
edition = "2024"
resolver = "2"
default-run = "coremark"

[workspace]
members = [
    "benches/res/rust/*",
    "utils",
    "runtimes/wasmi",
]

[[bin]]
name = "coremark"
path = "bins/coremark.rs"

[[bin]]
name = "plot"
path = "bins/plot.rs"

[dependencies]
benchmark-utils = { workspace = true }
rt-wasmi = { workspace = true }
rt-stitch = { workspace = true }
rt-tinywasm = { workspace = true }
rt-wasmi-031 = { workspace = true }
rt-wasmer = { workspace = true }
rt-wasmtime = { workspace = true }

wasmi_new = { workspace = true }
criterion = { workspace = true }
wat = { workspace = true }
serde_json = { workspace = true }
plotters = { workspace = true }
wasm3 = { workspace = true }

[workspace.dependencies]
benchmark-utils = { path = "utils" }

rt-wasmi = { path = "runtimes/wasmi" }
rt-stitch = { path = "runtimes/stitch" }
rt-tinywasm = { path = "runtimes/tinywasm" }
rt-wasmi-031 = { path = "runtimes/wasmi-031" }
rt-wasmer = { path = "runtimes/wasmer" }
rt-wasmtime = { path = "runtimes/wasmtime" }

wasmi_old = { package = "wasmi", version = "0.31.2" }
wasmi_new = { package = "wasmi", version = "0.50.0" }
tinywasm = "0.8.0"
wasmer = { version = "6.0.0", default-features = false, features = ["compiler", "wamr"] }
wasmer-compiler-singlepass = "6.0.0"
wasmer-compiler-cranelift = "6.0.0"
makepad-stitch = "0.1.0"
criterion = "0.7"
wat = "1"
serde_json = "1.0.117"
plotters = "0.3.7"

[workspace.dependencies.wasmtime]
version = "35.0.0"
default-features = false
features = ["winch", "cranelift", "pulley", "runtime"]

[workspace.dependencies.wasm3]
git = "https://github.com/robbepop/wasm3-rs.git"
branch = "rf-fix-wasm3-rs"
features = ["build-bindgen"]

[[bench]]
name = "criterion"
harness = false

[profile.bench]
# debug = true
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1 # required for the stitch Wasm runtime's LLVM's sibling calls optimization

[profile.wasm]
# The profile used to build Rust based benchmark inputs to WebAssembly.
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.ci]
# The profile with which we compile the criterion
# benchmark runner and subsequently all Wasm runtimes
# when running them in the GitHub Actions CI.
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 4
