[package]
name = "wasmi-benchmarks"
version = "0.1.0"
edition = "2024"
resolver = "2"
default-run = "coremark"

[workspace]
members = [
    "benches/res/rust/*",
    "utils",
    "runtimes/wasmi-v1",
]

[[bin]]
name = "coremark"
path = "bins/coremark.rs"

[[bin]]
name = "plot"
path = "bins/plot.rs"

[dependencies]
benchmark-utils = { workspace = true }
rt-wasmi-v1 = { path = "runtimes/wasmi-v1" }
rt-stitch = { path = "runtimes/stitch" }
rt-tinywasm = { path = "runtimes/tinywasm" }
rt-wasmi-031 = { path = "runtimes/wasmi-031" }
rt-wasmi-032 = { path = "runtimes/wasmi-032" }
rt-wasmer = { path = "runtimes/wasmer", optional = true }
rt-wasmtime = { path = "runtimes/wasmtime", optional = true }
rt-wasm3 = { path = "runtimes/wasm3" }

criterion = { workspace = true }
wat = { workspace = true }
serde_json = { workspace = true }
plotters = { workspace = true }

[workspace.dependencies]
benchmark-utils = { path = "utils" }
criterion = "0.8.2"
wat = "1"
serde_json = "1.0.117"
plotters = "0.3.7"

[[bench]]
name = "criterion"
harness = false

[profile.bench]
# debug = true
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1 # required for the stitch Wasm runtime's LLVM's sibling calls optimization

[profile.wasm]
# The profile used to build Rust based benchmark inputs to WebAssembly.
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.ci]
# The profile with which we compile the criterion
# benchmark runner and subsequently all Wasm runtimes
# when running them in the GitHub Actions CI.
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 4

[features]
default = []
wasmer = ["wasmer-singlepass", "wasmer-cranelift"]
wasmer-singlepass = ["dep:rt-wasmer"]
wasmer-cranelift = ["dep:rt-wasmer"]
wasmtime = ["wasmtime-cranelift", "wasmtime-winch", "wasmtime-pulley"]
wasmtime-cranelift = ["dep:rt-wasmtime"]
wasmtime-winch = ["dep:rt-wasmtime"]
wasmtime-pulley = ["dep:rt-wasmtime"]
