[package]
name = "rt-wasmer"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
benchmark-utils = { workspace = true }
anyhow = { workspace = true }
wasmer-compiler-singlepass = "7.2.0"
wasmer-compiler-cranelift = "7.2.0"

[dependencies.wasmer]
version = "7.2.0"
default-features = false
features = ["compiler"]

[features]
singlepass = ["wasmer/singlepass"]
cranelift = ["wasmer/cranelift"]
