[package]
name = "rt-wasmer"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
benchmark-utils = { workspace = true }
anyhow = { workspace = true }
wasmer-compiler-singlepass = { version = "7.2.0", optional = true }
wasmer-compiler-cranelift = { version = "7.2.0", optional = true }

[dependencies.wasmer]
version = "7.2.0"
default-features = false
features = ["compiler"]

[features]
singlepass = ["wasmer/singlepass", "dep:wasmer-compiler-singlepass"]
cranelift = ["wasmer/cranelift", "dep:wasmer-compiler-cranelift"]
