[package]
name = "rt-wasmtime"
edition = "2024"
publish = false

[lib]
path = "lib.rs"

[dependencies]
benchmark-utils = { workspace = true }
anyhow = { workspace = true }

[dependencies.wasmtime]
version = "46.0.0"
default-features = false
features = ["runtime", "anyhow"]

[features]
cranelift = ["wasmtime/cranelift"]
winch = ["wasmtime/winch"]
pulley = ["wasmtime/pulley", "wasmtime/cranelift"]
